--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>My Website</title>
   </head>
   <body>
-    <h1>Welcome to Jakob's Website!</h1>
+    <h1>Hello!</h1>
+    <script src="script.js"></script>
   </body>
 </html>
