--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
   <body>
     <h1>Hello!</h1>
     <script src="script.js"></script>
+    <img src="https://pbs.twimg.com/profile_images/1268671520462774273/NKMUG0hA_400x400.jpg" alt="Jakob" id="Jakob">
+    <title>Thats me! ^</title>
+    <h2>Click my face to see what happens...</h2>
+    <h3>Links:</h3>
+    <a href="https://www.linkedin.com/in/jakob-geiger-b8931212b/">LinkedIn</a>
+    <a href="https://medium.com/@jakob_31349">Medium</a>
   </body>
 </html>
